--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,5 @@ jobs:
       run: sudo xcode-select -s /Applications/Xcode_11.4.app && xcodebuild -version
     - name: Validate JSON
       run: swift .validate.swift
+      env:
+        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
