--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Validate JSON
       run: swift .validate.swift
       env:
-        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
+        GH_API_TOKEN_BASE64: ${{ secrets.GH_API_TOKEN_BASE64 }}
