Allow Commit/Push Steps to run after failed validator

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Commit Files
+      if: ${{ failure() }}
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "SwiftPackageIndex Bot"
         git commit -am "Apply Auto-Fixes"
     - name: Push Changes
+      if: ${{ failure() }}
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
