--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Select Xcode 12
-      run: sudo xcode-select -s /Applications/Xcode_12.app && xcodebuild -version
+      run: sudo xcode-select -s /Applications/Xcode_12_beta_2.app && xcodebuild -version
     - name: Validate JSON
       run: swift validate.swift
       env:
