--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -11,14 +11,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Select Xcode 12
-      run: sudo xcode-select -s /Applications/Xcode_12.app && xcodebuild -version
     - name: Run Script
-      run: swift nightly.swift
+      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift nightly.swift
       env:
         GH_API_TOKEN_BASE64: ${{ secrets.GH_API_TOKEN_BASE64 }}
     - name: Validate JSON
-      run: swift validate.swift
+      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift validate.swift
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Create Pull Request
