--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Validate JSON
       run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift validate.swift
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
