--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,16 +14,16 @@ jobs:
     - name: Run nightly script
       run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift nightly.swift
       env:
-        GH_API_TOKEN_BASE64: ${{ secrets.GH_API_TOKEN_BASE64 }}
+        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
     - name: Run validation script
       run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift validate.swift
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v3
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GH_API_TOKEN }}
         commit-message: Updated Packages
         title: '[Nightly] Updated Packages'
         body: |
