--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Validate JSON
-      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift validate.swift
+      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" xcrun swift validate.swift
       env:
         GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
