--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -12,11 +12,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Run nightly script
-      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift nightly.swift
+      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" xcrun swift nightly.swift
       env:
         GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
     - name: Run validation script
-      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" swift validate.swift
+      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" xcrun swift validate.swift
       env:
         GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
     - name: Create Pull Request
