--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   validate:
-    runs-on: self-hosted
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Validate JSON
-      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" xcrun swift validate.swift
+      run: env DEVELOPER_DIR="/Applications/Xcode_12.app" xcrun swift validate.swift
       env:
         GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
