--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,9 +1,10 @@
 name: Nightly Audit
 
 on: 
-  workflow_dispatch:
-  schedule:
-    - cron: '0 2 * * *'
+  # workflow_dispatch:
+  # schedule:
+  #   - cron: '0 2 * * *'
+  push:
 
 jobs:
   run_nightly:
@@ -11,14 +12,17 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Run nightly script
-      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" xcrun swift nightly.swift
+
+    - name: Check redirects
+      run: |
+        curl -O "https://raw.githubusercontent.com/SwiftPackageIndex/Validator/main/validator"
+        chmod +x validator
+        ./validator check-redirects --use-package-list -o packages.json -l 10
+        cat packages.json
+
       env:
-        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
-    - name: Run validation script
-      run: env DEVELOPER_DIR="/Applications/Xcode_12.0.app" xcrun swift validate.swift
-      env:
-        GH_API_TOKEN: ${{ secrets.GH_API_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v3
