Remove validator after run

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -19,6 +19,7 @@ jobs:
         chmod +x validator
         ./validator check-redirects --use-package-list -o packages.json
         cat packages.json
+        rm validator  # prevent it from appearing in the PR
 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
