Full list redirect check

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,10 +17,10 @@ jobs:
       run: |
         curl -s -O "https://raw.githubusercontent.com/SwiftPackageIndex/Validator/main/validator"
         chmod +x validator
-        # ./validator check-redirects --use-package-list -o packages.json -l 10
-        ./validator check-dependencies --use-package-list -o packages.json -l 500
-        cat packages.json
-        rm validator  # prevent it from appearing in the PR
+        ./validator check-redirects --use-package-list -o packages.json
+        # ./validator check-dependencies -i package.json -o packages.json
+        # cat packages.json
+        rm validator  # prevent binary from appearing in the PR
 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
