--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   run_nightly:
-    runs-on: self-hosted
-    timeout-minutes: 240
+    runs-on: macos-latest
+    # timeout-minutes: 240
     steps:
     - name: Checkout
       uses: actions/checkout@v2
