--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -19,26 +19,27 @@ jobs:
         curl -s -O "https://raw.githubusercontent.com/SwiftPackageIndex/Validator/main/validator"
         chmod +x validator
         # ./validator check-redirects -i packages.json -o packages.json
-        ./validator check-dependencies -i packages.json -o packages.json
+        # ./validator check-dependencies -i packages.json -o packages.json
+        ./validator check-dependencies https://github.com/fermoya/SwiftUIPager
         rm validator  # prevent binary from appearing in the PR
-
       env:
         DEVELOPER_DIR: /Applications/Xcode_12.app
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create Pull Request
-      id: cpr
-      uses: peter-evans/create-pull-request@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: Updated Packages
-        title: '[Nightly] Updated Packages'
-        body: |
-          :robot: This is an automated change
+    # - name: Create Pull Request
+    #   id: cpr
+    #   uses: peter-evans/create-pull-request@v3
+    #   with:
+    #     token: ${{ secrets.GITHUB_TOKEN }}
+    #     commit-message: Updated Packages
+    #     title: '[Nightly] Updated Packages'
+    #     body: |
+    #       :robot: This is an automated change
           
-          - Removed any redirects
-          - Removed any duplicates
-          - Removed any deleted repositories
-          - Added any unknown dependencies
-    - name: Check outputs
-      run: echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+    #       - Removed any redirects
+    #       - Removed any duplicates
+    #       - Removed any deleted repositories
+    #       - Added any unknown dependencies
+
+    # - name: Check outputs
+    #   run: echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
