--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,10 +1,9 @@
 name: Nightly Audit
 
 on: 
-  # workflow_dispatch:
-  # schedule:
-  #   - cron: '0 2 * * *'
-  push:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 2 * * *'
 
 jobs:
   run_nightly:
