--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,9 +1,10 @@
 name: Nightly Audit
 
 on: 
-  workflow_dispatch:
-  schedule:
-    - cron: '0 2 * * *'
+  # workflow_dispatch:
+  # schedule:
+  #   - cron: '0 2 * * *'
+  push:
 
 jobs:
   run_nightly:
@@ -26,23 +27,23 @@ jobs:
         echo packages.json diff:
         git diff packages.json
         echo
-        ./validator check-dependencies -i packages.json -o packages.json
+        # ./validator check-dependencies -i packages.json -o packages.json
         rm validator  # prevent binary from appearing in the PR
 
-    - name: Create Pull Request
-      id: cpr
-      uses: peter-evans/create-pull-request@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: Updated Packages
-        title: '[Nightly] Updated Packages'
-        body: |
-          :robot: This is an automated change
+    # - name: Create Pull Request
+    #   id: cpr
+    #   uses: peter-evans/create-pull-request@v3
+    #   with:
+    #     token: ${{ secrets.GITHUB_TOKEN }}
+    #     commit-message: Updated Packages
+    #     title: '[Nightly] Updated Packages'
+    #     body: |
+    #       :robot: This is an automated change
           
-          - Removed any redirects
-          - Removed any duplicates
-          - Removed any deleted repositories
-          - Added any unknown dependencies
+    #       - Removed any redirects
+    #       - Removed any duplicates
+    #       - Removed any deleted repositories
+    #       - Added any unknown dependencies
 
-    - name: Check outputs
-      run: echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+    # - name: Check outputs
+    #   run: echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
