--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,10 +1,9 @@
 name: Nightly Audit
 
 on: 
-  # workflow_dispatch:
-  # schedule:
-  #   - cron: '0 2 * * *'
-  push:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 2 * * *'
 
 jobs:
   run_nightly:
@@ -19,31 +18,30 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         rm -f ./validator
-        curl -s -O "https://raw.githubusercontent.com/SwiftPackageIndex/Validator/new-redirect-2/validator"
+        curl -s -O "https://raw.githubusercontent.com/SwiftPackageIndex/Validator/master/validator"
         chmod +x ./validator
         ./validator --version
         ./validator check-redirects -i packages.json -o packages.json
-        
         echo
         echo packages.json diff:
         git diff packages.json
         echo
-        # ./validator check-dependencies -i packages.json -o packages.json
+        ./validator check-dependencies -i packages.json -o packages.json
 
-    # - name: Create Pull Request
-    #   id: cpr
-    #   uses: peter-evans/create-pull-request@v3
-    #   with:
-    #     token: ${{ secrets.GITHUB_TOKEN }}
-    #     commit-message: Updated Packages
-    #     title: '[Nightly] Updated Packages'
-    #     body: |
-    #       :robot: This is an automated change
+    - name: Create Pull Request
+      id: cpr
+      uses: peter-evans/create-pull-request@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit-message: Updated Packages
+        title: '[Nightly] Updated Packages'
+        body: |
+          :robot: This is an automated change
           
-    #       - Removed any redirects
-    #       - Removed any duplicates
-    #       - Removed any deleted repositories
-    #       - Added any unknown dependencies
+          - Removed any redirects
+          - Removed any duplicates
+          - Removed any deleted repositories
+          - Added any unknown dependencies
 
-    # - name: Check outputs
-    #   run: echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+    - name: Check outputs
+      run: echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
