--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
+
   new validation:
     runs-on: macos-latest
     continue-on-error: true
@@ -14,10 +15,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Validate JSON (new)
-      run: xcrun swift new_validate.swift
+      run: xcrun swift .validate-new.swift
       env:
         DEVELOPER_DIR: /Applications/Xcode_12.app
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
   validate:
     runs-on: macos-latest
     steps:
