--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   validate:
-    runs-on: macos-11.1
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -19,7 +19,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   validate-new:
-    runs-on: macos-11.1
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
