--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,16 @@ on:
     branches: [ main ]
 
 jobs:
-  validate:
-    runs-on: macos-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Validate JSON
-      run: xcrun swift validate.swift
-      env:
-        DEVELOPER_DIR: /Applications/Xcode_12.3.app
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # validate:
+  #   runs-on: macos-latest
+  #   steps:
+  #   - name: Checkout
+  #     uses: actions/checkout@v2
+  #   - name: Validate JSON
+  #     run: xcrun swift validate.swift
+  #     env:
+  #       DEVELOPER_DIR: /Applications/Xcode_12.3.app
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   validate-new:
     runs-on: macos-latest
