--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   validate:
-    runs-on: macos-11.0
+    runs-on: ubuntu-20.04
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Validate JSON
-      run: xcrun swift validate.swift
+      run: docker run --rm -v "$PWD:/host" -w /host swift:5.3 swift validate.swift
       env:
         DEVELOPER_DIR: /Applications/Xcode_12.2.app
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
