--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  SWIFT_IMAGE: swiftlang/swift@sha256:a0d75888a49938175bb4da3a3d6e3ab5cdf3095fe71ed427ee4a03a05a78336d  # swift 5.5 nightly
+
 jobs:
   validate:
     runs-on: ubuntu-20.04
@@ -13,6 +16,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Validate JSON
-      run: docker run --rm -v "$PWD:/host" -w /host swift:5.4 swift validate.swift
+      run: docker run --rm -v "$PWD:/host" -w /host $SWIFT_IMAGE swift validate.swift
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
