--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -14,7 +14,8 @@ jobs:
 
     - name: Run checks
       env:
-        DEVELOPER_DIR: /Applications/Xcode_13.1.app
+        # see https://github.com/actions/virtual-environments for supported Xcode versions
+        DEVELOPER_DIR: /Applications/Xcode_13.2.app
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         rm -f ./validator
