--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run_nightly:
-    runs-on: macos-11
+    runs-on: macos-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -15,7 +15,7 @@ jobs:
     - name: Run checks
       env:
         # see https://github.com/actions/virtual-environments for supported Xcode versions
-        DEVELOPER_DIR: /Applications/Xcode_13.2.app
+        DEVELOPER_DIR: /Applications/Xcode_13.1.app
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         rm -f ./validator
