--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -4,6 +4,8 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 2 * * *'
+  pull_request_review:
+    types: [submitted]
 
 jobs:
   run_nightly:
