--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,7 +2,7 @@ blank_issues_enabled: false
 contact_links:
   - name: Add a Package
     url: https://swiftpackageindex.com/add-a-package
-    about: Add a new package to the Swift Package Index
+    about: Add one or more new packages to the Swift Package Index
   - name: Bugs and Feature Requests
     url: https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose
     about: Do you have a bug or feature reuest related to the Swift Package Index?
