My YAML editor is picky.

--- a/.github/ISSUE_TEMPLATE/add_package.yml
+++ b/.github/ISSUE_TEMPLATE/add_package.yml
@@ -1,7 +1,7 @@
 name: Add Package(s)
 description: Add one or more new packages to the Swift Package Index.
-title: "Add <Package>"
-labels: ["Add Package"]
+title: 'Add <Package>'
+labels: ['Add Package']
 body:
   - type: markdown
     attributes:
