--- a/.github/ISSUE_TEMPLATE/add_package.yml
+++ b/.github/ISSUE_TEMPLATE/add_package.yml
@@ -8,7 +8,9 @@ body:
       value: |
         Thank you for taking the time to contribute to Swift Package Index.
 
-        There's no gatekeeping or quality threshold to be included in the Swift Package Index. As long as packages are valid, and meet the requirements below, we will accept them. If you're unsure, submit the package and we can provide any necessary feedback.
+        There's no gatekeeping or quality threshold for a package to be included in the Swift Package Index. As long as packages are valid and meet the requirements below, we will accept them. If you're unsure, please submit the package and we can provide feedback.
+
+        The requirements are:
 
         * The package repositories are all publicly accessible.
         * The packages all contain a Package.swift file in the root folder.
