[autopr] switch messaging based on CI env var

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -24,7 +24,7 @@ jobs:
           GH_BODY: ${{ github.event.issue.body }}
 
       - name: Validate JSON
-        run: docker run --rm -v "$PWD:/host" -w /host $SWIFT_IMAGE swift validate.swift
+        run: docker run --rm --env CI=true -v "$PWD:/host" -w /host $SWIFT_IMAGE swift validate.swift
         id: validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
