--- a/.github/ISSUE_TEMPLATE/add_package.yml
+++ b/.github/ISSUE_TEMPLATE/add_package.yml
@@ -22,7 +22,7 @@ body:
     id: list
     attributes:
       label: New Packages
-      description: Please list all of the packages you wish to add here. Place each package on a new line.
+      description: Please list the URLs to all the repositories where the packages you wish to add are hosted. Place each package on a new line.
       placeholder: https://github.com/daveverwer/LeftPad.git
     validations:
       required: true
