--- a/.github/ISSUE_TEMPLATE/remove_package.yml
+++ b/.github/ISSUE_TEMPLATE/remove_package.yml
@@ -1,21 +1,21 @@
 name: Remove Package(s)
-description: Remove one or more existing packages from the Swift Package Index.
+description: Remove one or more packages from the Swift Package Index.
 title: 'Remove <Package>'
 labels: ['Remove Package']
 body:
   - type: markdown
     attributes:
       value: |
-        We understand that you may wish to remove a package from the Swift Package Index, and we respect that wish.
-        
-        Note that we automatically track packages which are a dependency of another package on the index, so your package may re-appear.
+        Fill in this form to request that we remove one or more packages from the Swift Package Index. We will review and remove them as soon as possible.
 
-        The Swift Package Index will show when a project has been archived, and will automatically update its information if it's renamed or moved to a new owner.
+        There's no need to remove a package if its repository has been archived as we clearly identify archived projects on package pages. Our automated scripts will also detect packages where the repository has been deleted or renamed, so there's no need to fill in this form if that's the case.
+
+        **Note:** We have automated scripts that find new packages through their dependencies. So, if another package is likely to depend on your package, please mention this in the notes.
   - type: textarea
     id: list
     attributes:
-      label: List Packages
-      description: Please list all of the packages you wish to remove here. Place each package on a new line.
+      label: Packages to Remove
+      description: Please list the URLs to all of the packages you wish to remove. Place each package URL on a new line.
       placeholder: https://github.com/daveverwer/LeftPad.git
     validations:
       required: true
@@ -23,7 +23,6 @@ body:
     id: notes
     attributes:
       label: Notes
-      description: Please explain why the package(s) should be removed from the Swift Package Index.
     validations:
       required: false
   - type: checkboxes
@@ -31,4 +30,4 @@ body:
     attributes:
       label: Ownership
       options:
-        - label: I am the author or core maintainer of the package(s) listed.
+        - label: I am the author or core maintainer of the package(s) listed for removal.
