--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       # TODO: remove --limit
       - name: Check redirect
         run: |
@@ -22,6 +23,7 @@ jobs:
           echo
           echo packages.json diff:
           git diff packages.json
+
       - name: Upload packages.json
         uses: actions/upload-artifact@v3
         with:
@@ -37,6 +39,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: packages.json
+
       # TODO: remove --limit
       - name: Check dependencies
         run: |
@@ -45,6 +48,7 @@ jobs:
           chmod +x ./validator
           ./validator --version
           ./validator check-dependencies -i packages.json -o packages.json --chunk 0 --number-of-chunks 3 --limit 10
+
       - name: Upload packages.json
         uses: actions/upload-artifact@v3
         with:
@@ -60,6 +64,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: packages.json
+
       # TODO: remove --limit
       - name: Check dependencies
         run: |
@@ -74,15 +79,20 @@ jobs:
           name: packages.json
           path: packages.json
 
-  check_dependencies_2:
+  check_dependencies_last:
     name: Check dependencies batch 0
     needs: check_dependencies_1
     runs-on: macos-latest
     steps:
+      # we need to check out the repo in the last step in order to create a PR
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Download packages.json
         uses: actions/download-artifact@v3
         with:
           name: packages.json
+
       # TODO: remove --limit
       - name: Check dependencies
         run: |
